  
UPDATED FUNCTIONS:
  * PlotACF() gets some better defaults and new arguments.
  * PlotECDF() loses its argument cex.axis, which is not necessary as we 
    should use the general par approach.
  * PlotFdist() will support defining the ylims in the histogram now. 
    Moreover some internal arguments are handled more consistently.
  * print.TMod() will accept argument "digits" now.
  * Desc.numeric will support conf.levels now instead of set fix 95%.
  * ToWrdPlot() gains another argument "pointsize". 
  * Desc.formula() supports one sided formulas.
  
BUGFIXES:
  * Outlier() will now use the third quartile instead of NA.




DescTools 0.99.34 (2020-03-12)
------------------------------

UPDATED FUNCTIONS:
  * TextContrastColor() gets new options to choose white/black color.
  * Some updates to helpfiles.

BUGFIXES:
  * PlotArea() does no longer use dots arguments for the polygon function.
    But they are still passed on to matplot().
  * Corrected deparse1() bug causing a build error for all current versions 
    on CRAN.




DescTools 0.99.33 (2020-03-08)
------------------------------

NEW FUNCTIONS ADDED:
  * AllIdentical() allows to check multiple objects to be exactly equal.
  * CountWorkDays() return the number of workdays within a time period.
  * VanWaerdenTest() completes the group of non-parametric (post hoc) tests.
  * RSessionAlive() and RTempAlive() return the time since starting R, resp.
    creating them temporary directory.
  
UPDATED FUNCTIONS:
  * Conf() is extended by Matthew's correlation coefficient.
  * Pal() gets the new palette "Helsana2"
  * MeanAD()'s argument FUN has been renamed to center to be 
    consistent with MAD().
  * MeanAD(), MAD(), CoefVar(), Skew(), Kurt() support weights now. 
  * Mar() and Mgp() will return visible when all arguments are NULL.
    Both get a new argument reset for reset sets to their defaults.

BUGFIXES:
  * SetNames() will now do what was promised in the helptext and