@@ -15,9 +15,10 @@ UPDATED FUNCTIONS:
   * PlotFdist() will support defining the ylims in the histogram now. 
     Moreover some internal arguments are handled more consistently.
   * print.TMod() will accept argument "digits" now.
-  * Desc.numeric will support conf.levels now instead of set fix 95%.
+  * Desc.numeric will support conf.levels now instead of set fixed 95%-CI.
   * ToWrdPlot() gains another argument "pointsize". 
   * Desc.formula() supports one sided formulas.
+  * Desc.formula() now propagates arguments for tables as rfrq and freq.
   
 BUGFIXES:
   * Outlier() will now use the third quartile instead of NA.
